--- a/public/css/app.copy.css
+++ b/public/css/app.copy.css
@@ -42,15 +42,15 @@
 }
 
 .item-boxes{
-  margin-top:150px;
+  margin-top: 50px;
 }
 
 
 
-body {
-  background-image: url(https://res.cloudinary.com/uoyaryotanikki/image/upload/v1585808501/Lush-White-Nature_xyiaec.jpg);   
+/* body {
+  background-image: url(https://res.cloudinary.com/uoyaryotanikki/image/upload/v1590656953/sincerely-media-FPrniQ84dEk-unsplash_y0hdge.jpg);   
   object-fit: cover;
-}
+} */
 
 
 
