--- a/public/css/app.copy.css
+++ b/public/css/app.copy.css
@@ -2,6 +2,121 @@
 
 /* LP */
 
+.article-post{
+  width: 1000px;
+  margin: auto;
+}
+
+.index-prof{
+ height: 30px;
+ width: 30px;
+ border-radius: 50%;
+ padding: 2px;
+}
+.prof-edit{
+ text-align: center;
+}
+
+
+.prof-edit-image{
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  text-align: center;
+}
+
+.index-nikki-title{
+  font-size: 70px;
+}
+
+.index-image{
+  background-image: url(https://res.cloudinary.com/uoyaryotanikki/image/upload/v1604804370/lrv5eqdllowee50ogxe9.jpg);
+  background-size:cover;
+  width: 100%;
+  height: 500px;
+}
+.form-control{
+  display: block;
+    width: 100%;
+    height: calc(2.19rem + 2px);
+    padding: .375rem .75rem;
+    font-size: .9rem;
+    line-height: 1.6;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 1.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.clear::after{
+  content:"";
+  clear: both;
+  display: block;
+}
+
+.login-back-image{
+ color: black;
+ background-size:cover;
+ background-repeat: no-repeat;
+}
+
+
+.title{
+  opacity:0;
+  animation-name: Feature; 
+  animation-duration: 5s; 
+  animation-iteration-count:2;
+  animation-fill-mode: forwards; 
+}
+
+@keyframes Feature {
+  0% {
+    opacity: 0;
+    color:white;
+  }
+  90% {
+   opacity: 1;
+   color:grey;
+  }
+   100% {
+    opacity: 1;
+    color:black;
+  } 
+  }
+
+
+.card-box{
+  justify-content: space-around;
+}
+div.card-box div.card {
+  transition:box-shadow 0.3s, transform 0.3s;
+}
+
+div.card-box div.card:hover {
+  box-shadow:0 6px 14px rgba(0, 0, 0, 0.24);
+  transform:translate(0, -2px);
+}
+
+
+.index-card {
+  transition:box-shadow 0.3s, transform 0.3s;
+}
+
+.index-card:hover {
+  box-shadow:0 6px 14px rgba(0, 0, 0, 0.24);
+  transform:translate(0, -2px);
+}
+
+.card-img-top{
+  width:100%;
+  height: 286px;
+  background-size: cover;
+}
+
+
+
 .submit{
   margin:100px;
   padding-left: 160px;
@@ -40,6 +155,11 @@
   border: 1px solid #3169d1;
   border-radius: 10px;
   padding: 10px 30px;
+}
+
+.login-btn{
+  padding: 15px 100px;
+  margin-right:120px ;
 }
 
 .submit-btn:hover{
@@ -105,9 +225,24 @@ section{
 }
 
 .title-message{
-  color:white;
-  text-shadow:0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black;
+  opacity:0;
+  animation-name: NIKKI; 
+  animation-duration: 5s; 
+  animation-iteration-count:2;
+  animation-fill-mode: forwards; 
 }
+
+@keyframes NIKKI {
+  0% {
+    opacity: 0;
+    color:white;
+  }
+
+   100% {
+    opacity: 1;
+    text-shadow:0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black,0 0 1px black;
+  } 
+  }
 
 .comment.row{
   border: solid 2px black;
